--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host 192.168.0.99",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,6 +29,10 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
@@ -46,10 +51,14 @@
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-tailwindcss": "^3.14.3",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
     "typescript": ">=4.7.4 <5.4.0",
     "vite": "^5.1.4"
   }
