--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "esModuleInterop": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -29,6 +30,6 @@
       "@/*": ["frontend/*"]
     }
   },
-  "include": ["frontend"],
+  "include": ["frontend", "setupTests.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
