--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.354.0",
     "next-themes": "^0.3.0",
