--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -29,7 +29,8 @@ RUN <<EOF
     intl \
     pdo_mysql \
     zip \
-    bcmath
+    bcmath \
+    calendar
   composer config -g process-timeout 3600
   composer config -g repos.packagist composer https://packagist.org
 EOF
