--- a/src/package.json
+++ b/src/package.json
@@ -12,11 +12,12 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@nivo/bar": "^0.85.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query": "^5.29.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -25,6 +26,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-swipeable": "^7.0.1",
     "react-use": "^17.5.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
@@ -33,7 +35,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
-    "@tanstack/react-query-devtools": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.29.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
