--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.6.4",
     "laravel-vite-plugin": "^1.0.0",
     "postcss": "^8.4.47",
+    "prettier-plugin-blade": "^2.1.21",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.14",
     "vite": "^5.0.0"
   }
